# oxisym

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
src/: lib.rs  naming.rs  same_call_both_branches.rs  shape_hash.rs  similar_fn_bodies.rs  similar_match_arms.rs
ui/: same_call_both_branches.rs  same_call_both_branches.stderr  similar_fn_bodies.rs  similar_fn_bodies.stderr  similar_match_arms.rs  similar_match_arms.stderr
