[package]
name = "oxisym"
version = "0.1.0"
edition = "2024"
description = "Dylint lints for detecting structural duplication in Rust code"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "f6d310692116e9a527ce6d0b3526c965d9c5d7b9" }
dylint_linting = "6.0.1"

[dev-dependencies]
dylint_testing = "6.0.1"

[workspace.metadata.dylint]
libraries = [
    { path = "." },
]

[package.metadata.rust-analyzer]
rustc_private = true
